--- a/manuscripts/24-jb-dags/24-jb-measurement-sample-restriction.qmd
+++ b/manuscripts/24-jb-dags/24-jb-measurement-sample-restriction.qmd
@@ -1129,7 +1129,7 @@ $$
 A \coprod Y(\tilde{a})|L
 $$
 
-Causal DAGs do not directly represent counterfactual outcomes. Instead, they evaluate whether causality can be identified from hypothetical interventions on the variables represented in a graph. Formally, causal directed acyclic graphs rely on Judea Pearl's Do-Calculus [@pearl2009a], which appeals to the concept of an 'interventional distribution'. The idea is that any node in a graph can be intervened upon. Here, nodes and edges in a causal diagram correspond to non-parametric structural equations. For instance, if $L$ denotes the common causes of treatment $A$ and outcome $Y$, then:
+Causal DAGs do not directly represent counterfactual outcomes. Instead, they evaluate whether causality can be identified from hypothetical interventions on the variables represented in a graph. Formally, causal directed acyclic graphs rely on Judea Pearl's do-calculus [@pearl2009a], which appeals to the concept of an 'interventional distribution'. The idea is that any node in a graph can be intervened upon. Here, nodes and edges in a causal diagram correspond to non-parametric structural equations. For instance, if $L$ denotes the common causes of treatment $A$ and outcome $Y$, then:
 - The node $L$ corresponds to the non-parametric structural equation model $f_L(U_L)$.
 - The treatment $A = f_A(L, U_A)$.
 - The outcome $Y = f_Y(A, L, U_Y)$.
