--- a/manuscripts/24-jb-dags/24-jb-swigs.qmd
+++ b/manuscripts/24-jb-dags/24-jb-swigs.qmd
@@ -357,10 +357,7 @@ The discrepancy in evidence for effect modification depending on the scale we ch
 
 When evaluating evidence for interaction, we must assess whether the combined effects of two treatments differ from the unique effects of each treatment relative to a baseline where neither treatment is administered. Understanding multiple interventions can be facilitated by using Single World Intervention Graphs (SWIGs) [@richardson2013].
 
-SWIGs employ Pearl's rules of d-separation but offer additional benefits by graphically representing the complex factorisations required for identification, presenting distinct interventions in separate graphs. This has several advantages:
-
-1. **Precision and Clarity**: SWIGs allow us to consider identification conditions for each counterfactual outcome individually, enhancing precision and clarity (refer to [Appendix C](#id-app-c)).
-2. **Tracks d-separation**: SWIGs help investigators keep track of d-separation for each intervention, which is particularly useful when dealing with multiple interventions.
+SWIGs employ Pearl's rules of d-separation but offer additional benefits by graphically representing the complex factorisations required for identification, presenting distinct interventions in separate graphs.  The first advantage is **greater precision and clarity**: SWIGs allow us to consider identification conditions for each counterfactual outcome individually. Such precision is useful because indentification conditions may differ for one, but not another, of the treatments to be compared. Node-splitting also makes it easier to determine identification conditions that are obscured in causal directed acylic graphs, for an example refer to [Appendix C](#id-app-c)). The second advantage **Single World Intervention Graphs unify the potential outcomes framework with Pearl's structural causal model framework**: any causal relationship that can be represented in a causal directed acyclic graph can als be represented in a Single World Intervention Graph [@richardson2013swigsprimer].
 
 ::: {#tbl-swigtable}
 ```{=latex}
@@ -378,7 +375,7 @@ Consider a template graph @tbl-swigtable $\mathcal{G}$. Applying node-splitting 
 1. **SWIG for $A$ = 0**: Denoted as $\mathcal{G}_{A=0}$, this graph shows the hypothetical scenario where $A$ is set to 0.
 2. **SWIG for $A$ = 1**: Denoted as $\mathcal{G}_{A=1}$, this graph shows the hypothetical scenario where $A$ is set to 1.
 
-In these graphs, the node corresponding to the outcome $A$ is split, relabelled with the random and fixed component, and then each node that follows is labelled with the fixed component until the next intervention. Here, $Y$ is the only variable to follow $A$ and it is relabelled either $Y(0)$ or $Y(1)$ corresponding to whether $A=1$ or $A=0$; hence $Y$ is relabelled as either $Y(0)$ or $Y(1)$. Note that we do not place both $Y(0)$ and $Y(1)$ on the same Single World Intervention Graph because the variables are not jointly observed. Hence, we evaluate $Y(0)\coprod A = 0| L$ and $Y(1)\coprod A = 1 | L$ separately, and never $[Y(0) Y(1)] \coprod A | L$.
+In these graphs, the node corresponding to the outcome $A$ is split, relabelled with the random and fixed component, and then each node that follows is labelled with the fixed component until the next intervention. Here, $Y$ is the only variable to follow $A$ and it is relabelled either $Y(0)$ or $Y(1)$ corresponding to whether $A=1$ or $A=0$; hence $Y$ is relabelled as either $Y(0)$ or $Y(1)$. Note that we do not place both $Y(0)$ and $Y(1)$ on the same Single World Intervention Graph because the variables are not jointly observed. Hence, we evaluate $Y(0)\coprod A = 0| L$ and $Y(1)\coprod A = 1 | L$ separately.
 
 
 ### Interaction as a Joint Intervention
@@ -405,7 +402,7 @@ By comparing these expected outcomes, we can determine the presence and nature o
 
 ### Example
 
-Consider the effect of beliefs in big gods (exposure $A$) and a culture's monumental architecture (exposure $B$) on social complexity (outcome $Y$). Both interventions have equal status; we are not investigating effect modification of one by the other. The interventions must be well-defined. We must state, understand, and obtain measures for the quantities 'big gods', 'monumental architecture', and 'social complexity' measured at a clearly stated time interval after the interventions are first observed.
+Consider the effect of beliefs in big Gods (exposure $A$) and a culture's monumental architecture (exposure $B$) on social complexity (outcome $Y$). Both interventions have equal status; we are not investigating effect modification of one by the other. The interventions must be well-defined. We must state, understand, and obtain measures for the quantities 'big gods', 'monumental architecture', and 'social complexity' measured at a clearly stated time interval after the interventions are first observed.
 
 We need to state a population and scale to assess the individual and combined effects of $A$ and $B$. The units in the study draw from this population—say they are the societies of primary urban genesis [@wheatley1971pivot]. We look for evidence of causal interaction on the difference scale. Evidence for interaction would be present if the following inequality were to hold. Where,
 
@@ -556,7 +553,7 @@ In such a scenario, it would not be feasible to consistently decompose the total
 
 @tbl-medationassumptions $\mathcal{G}_2$ presents the weaker assumptions required to identify a controlled direct effect. We might examine the effect of the pandemic lockdown if we could intervene and set everyone's trust in government to, say, one standard deviation above the baseline, compared with fixing trust in government to the average level at baseline. We might use modified treatment policies (described below) that specify interventions as functions of the data. For instance, we might investigate interventions that 'shift only those whose mistrust of government was below the mean level of trust at baseline and compare these potential outcomes with those observed.' Asking and answering precisely formulated causal questions such as this might lead to clearer policy advice, especially in situations where policymakers can influence public attitudes towards the government; see: @williams2021; @díaz2021; @hoffman2022; @hoffman2023. 
 
-In any case, I hope this discussion of causal mediation analysis clarifies that it would be unwise to simply examine the coefficients obtained from structural equation models and interpret them as meaningful as in statistical mediation analysis. We have no guarantees that these coefficients are interpretable. Rather, to answer any causal question, we must first state it, with respect to clearly defined counterfactual contrasts and a target population.
+In any case, I hope this discussion of causal mediation analysis clarifies that it would be unwise to simply examine the coefficients obtained from structural equation models and interpret them as meaningful as in statistical mediation analysis. To answer any causal question, we must first state it, with respect to clearly defined counterfactual contrasts and a target population. Once we state our causal question, we find have no guarantees that these coefficients are interpretable [@vanderweele2015]. 
 
 For those interested in stistical estimators for causal mediation analysis, I recommend visiting the CMAverse website ([https://bs1125.github.io/CMAverse/articles/overview.html](https://bs1125.github.io/CMAverse/articles/overview.html), accessed 12 December 2023). This excellent resource provides comprehensive documentation, software, and practical examples, including sensitivity analyses. Next, we will consider more complex scenarios that involve feedback between treatments and confounders across multiple time points, settings in which traditional statistical methods also fail to provide valid causal inferences.
 
