--- a/manuscripts/24-jb-dags/24-jb-swigs.tex
+++ b/manuscripts/24-jb-dags/24-jb-swigs.tex
@@ -211,7 +211,7 @@ Analysis of Time-Varying Treatments}
       
 
 
-\date{2024-06-03}
+\date{2024-06-08}
 \begin{document}
 \maketitle
 \begin{abstract}
@@ -878,21 +878,19 @@ using Single World Intervention Graphs (SWIGs)
 SWIGs employ Pearl's rules of d-separation but offer additional benefits
 by graphically representing the complex factorisations required for
 identification, presenting distinct interventions in separate graphs.
-This has several advantages:
-
-\begin{enumerate}
-\def\labelenumi{\arabic{enumi}.}
-\tightlist
-\item
-  \textbf{Precision and Clarity}: SWIGs allow us to consider
-  identification conditions for each counterfactual outcome
-  individually, enhancing precision and clarity (refer to
-  \hyperref[id-app-c]{Appendix C}).
-\item
-  \textbf{Tracks d-separation}: SWIGs help investigators keep track of
-  d-separation for each intervention, which is particularly useful when
-  dealing with multiple interventions.
-\end{enumerate}
+The first advantage is \textbf{greater precision and clarity}: SWIGs
+allow us to consider identification conditions for each counterfactual
+outcome individually. Such precision is useful because indentification
+conditions may differ for one, but not another, of the treatments to be
+compared. Node-splitting also makes it easier to determine
+identification conditions that are obscured in causal directed acylic
+graphs, for an example refer to \hyperref[id-app-c]{Appendix C}). The
+second advantage \textbf{Single World Intervention Graphs unify the
+potential outcomes framework with Pearl's structural causal model
+framework}: any causal relationship that can be represented in a causal
+directed acyclic graph can als be represented in a Single World
+Intervention Graph (\citeproc{ref-richardson2013swigsprimer}{Richardson
+and Robins 2013b}).
 
 \begin{table}
 
@@ -956,8 +954,7 @@ or \(A=0\); hence \(Y\) is relabelled as either \(Y(0)\) or \(Y(1)\).
 Note that we do not place both \(Y(0)\) and \(Y(1)\) on the same Single
 World Intervention Graph because the variables are not jointly observed.
 Hence, we evaluate \(Y(0)\coprod A = 0| L\) and
-\(Y(1)\coprod A = 1 | L\) separately, and never
-\([Y(0) Y(1)] \coprod A | L\).
+\(Y(1)\coprod A = 1 | L\) separately.
 
 \subsubsection{Interaction as a Joint
 Intervention}\label{interaction-as-a-joint-intervention}
@@ -1011,7 +1008,7 @@ respect to the outcome \(Y\).
 
 \subsubsection{Example}\label{example}
 
-Consider the effect of beliefs in big gods (exposure \(A\)) and a
+Consider the effect of beliefs in big Gods (exposure \(A\)) and a
 culture's monumental architecture (exposure \(B\)) on social complexity
 (outcome \(Y\)). Both interventions have equal status; we are not
 investigating effect modification of one by the other. The interventions
@@ -1420,10 +1417,11 @@ al.} (\citeproc{ref-duxedaz2021}{2021}); Hoffman \emph{et al.}
 In any case, I hope this discussion of causal mediation analysis
 clarifies that it would be unwise to simply examine the coefficients
 obtained from structural equation models and interpret them as
-meaningful as in statistical mediation analysis. We have no guarantees
-that these coefficients are interpretable. Rather, to answer any causal
+meaningful as in statistical mediation analysis. To answer any causal
 question, we must first state it, with respect to clearly defined
-counterfactual contrasts and a target population.
+counterfactual contrasts and a target population. Once we state our
+causal question, we find have no guarantees that these coefficients are
+interpretable (\citeproc{ref-vanderweele2015}{VanderWeele 2015}).
 
 For those interested in stistical estimators for causal mediation
 analysis, I recommend visiting the CMAverse website
@@ -1800,27 +1798,23 @@ G-formula}\label{identification-of-dynamic-time-varying-treatment-strategies-usi
 extension of Robins (\citeproc{ref-robins1986}{1986}) dynamic g-formula.
 Essentially, the algorithm is:
 
-\begin{enumerate}
-\def\labelenumi{\arabic{enumi}.}
-\item
-  Identify all the variables that influence the outcome
-  \(Y(\mathbf{g})\), excluding those that are current or past treatment
-  variables or covariates.
-\item
-  For each treatment at time \(t\), check if the treatment is
-  independent of the variables identified in step 1, after accounting
-  for past covariates and treatments, in each Single World Intervention
-  Graph where the treatment values are fixed. Thus amounts to removing
-  the dotted green arrows from the dynamic Single World Intervention
-  Graph in Table~\ref{tbl-swigtabledeveloped} \(\mathcal{G}_5\), and
-  doing so gives us Table~\ref{tbl-swigtabledeveloped}
-  \(\mathcal{G}_4\). For each time point, we recover a set of future
-  counterfactual variables that includes the outcome under the treat
-  regime under consideration, \(Y(\mathbf{\tilde{g}})\) but which also
-  includes other variables that the treatment might affect, including
-  future treatments. All backdoor paths must be closed to each member of
-  this set of counterfactual variables.
-\end{enumerate}
+First, identify all the variables that influence the outcome
+\(Y(\mathbf{g})\), excluding those that are current or past treatment
+variables or covariates.
+
+Second, for each treatment at time \(t\), check if the treatment is
+independent of the variables identified in step 1, after accounting for
+past covariates and treatments, in each Single World Intervention Graph
+where the treatment values are fixed. This step amounts to removing the
+dotted green arrows from the dynamic Single World Intervention Graph in
+Table~\ref{tbl-swigtabledeveloped} \(\mathcal{G}_5\), and doing so gives
+us Table~\ref{tbl-swigtabledeveloped} \(\mathcal{G}_4\). For each time
+point, we recover a set of future counterfactual variables that includes
+the outcome under the treat regime under consideration,
+\(Y(\mathbf{\tilde{g}})\) but which also includes other variables that
+the treatment might affect, including future treatments. All backdoor
+paths must be closed to each member of this set of counterfactual
+variables.
 
 Where:
 
@@ -2156,7 +2150,7 @@ the dynamic treatment strategy under consideration is not identified.
 \begin{CSLReferences}{1}{0}
 \bibitem[\citeproctext]{ref-angrist2009mostly}
 Angrist, JD, and Pischke, J-S (2009) \emph{Mostly harmless econometrics:
-An empiricist's companion}, Princeton university press.
+An empiricist's companion}, Princeton University Press.
 
 \bibitem[\citeproctext]{ref-bareinboim2013general}
 Bareinboim, E, and Pearl, J (2013) A general algorithm for deciding
@@ -2313,7 +2307,7 @@ Lash, TL, Rothman, KJ, VanderWeele, TJ, and Haneuse, S (2020)
 
 \bibitem[\citeproctext]{ref-mcelreath2020}
 McElreath, R (2020) \emph{Statistical rethinking: A {B}ayesian course
-with examples in r and stan}, CRC press.
+with examples in {R} and {S}tan}, CRC press.
 
 \bibitem[\citeproctext]{ref-montgomery2018}
 Montgomery, JM, Nyhan, B, and Torres, M (2018) How conditioning on
